# wypiwys

./: CMakeLists.txt  LICENSE  README.md
mel/: README.txt
mel/prefs/icons/: Thumbs.db
mel/prefs/shelves/: shelf_denapp.mel
mel/scripts/: getBoundingSphereRadius.mel  getCurrentCamera.mel  getCurrentEye.mel  getCurrentLookAt.mel  getCurrentUp.mel  getEigenValues.mel  getEigenVector.mel  getNewLookAt.mel  getNewUp.mel  getPolygonArea.mel  getPosition.mel  getRayVector.mel  getVertexPositions.mel  getVertexWeights.mel  listAllVertices.mel  mat_add.mel  mat_identity.mel  mat_mul.mel  mat_scale.mel  solveCubicEquation.mel  wypiwyl.mel  wypiwys.mel
src/: BufferManager.h  CMakeLists.txt  CMakeLists.txt~  Camera.h  CameraAnimation.h  Mesh.h  main.cpp
vecmath/: GMatrix.h  GMatrix_.h  GVector.h  GVector_.h  Point2.h  Point3.h  Point4.h  Quat4_.h  Vector2.h  Vector3.h  Vector4.h  VmUtil.h  dynpq.h  vecmath.h  vm_conf.h
