CMAKE_MINIMUM_REQUIRED (VERSION 2.9)
SET(CMAKE_VERBOSE_MAKEFILE 1)
PROJECT(wypiwys)
SET ( CMAKE_MACOSX_RPATH 1 )
set ( CMAKE_BUILD_TYPE Release )
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
if (WIN32)
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
else () # Cygwin, Mac
     add_definitions(-g -O3 -Wall)
     link_directories(/usr/local/lib)
     include_directories(./include/vecmath)
set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -march=native")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
endif (WIN32)
ADD_SUBDIRECTORY(src)
